[gd_scene load_steps=14 format=3 uid="uid://dlsq5k1nakpn3"]

[ext_resource type="PackedScene" uid="uid://b455gke4ucqxq" path="res://entities/base_enemy.tscn" id="1_fpun0"]
[ext_resource type="Shader" path="res://shaders/glitch.gdshader" id="2_3r5o2"]
[ext_resource type="Texture2D" uid="uid://bdmyfr03c16ve" path="res://textures/enemies/Octorok-Sheet.png" id="2_ns7mj"]
[ext_resource type="Script" path="res://components/sprite_animation.gd" id="3_8sbj4"]
[ext_resource type="Script" path="res://components/enemy_controllers/ranged_enemy_controller.gd" id="3_iaivd"]
[ext_resource type="Texture2D" uid="uid://dcbvufsw0pjyr" path="res://icon.svg" id="4_6roba"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t1lc1"]
radius = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jcc5k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2w28"]
atlas = ExtResource("2_ns7mj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4hx3"]
atlas = ExtResource("2_ns7mj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hv8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2w28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4hx3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2w28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4hx3")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1md4b"]
shader = ExtResource("2_3r5o2")
shader_parameter/shake_power = 0.001
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_v8t7i"]
radius = 16.0

[node name="RangedEnemy" instance=ExtResource("1_fpun0")]
collision_mask = 2

[node name="TerrainCollisionShape" type="CollisionShape2D" parent="." index="0"]
visible = false
shape = SubResource("CircleShape2D_t1lc1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
material = SubResource("ShaderMaterial_jcc5k")
sprite_frames = SubResource("SpriteFrames_6hv8q")
animation = &"idle"
frame_progress = 0.406742

[node name="Glitch" type="Sprite2D" parent="." index="2"]
material = SubResource("ShaderMaterial_1md4b")
texture = ExtResource("4_6roba")

[node name="SpriteAnimation" type="Node" parent="." index="3" node_paths=PackedStringArray("body", "sprite")]
script = ExtResource("3_8sbj4")
body = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="Hitbox" parent="." index="5"]
visible = false
collision_layer = 8
collision_mask = 4
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource("CircleShape2D_v8t7i")

[node name="MovementTimer" type="Timer" parent="." index="6"]
autostart = true

[node name="RangeAttackTimer" type="Timer" parent="." index="7"]
autostart = true

[node name="RangedEnemyController" type="Node" parent="." index="8" node_paths=PackedStringArray("body", "move_timer")]
script = ExtResource("3_iaivd")
body = NodePath("..")
move_timer = NodePath("../MovementTimer")

[connection signal="timeout" from="MovementTimer" to="RangedEnemyController" method="_on_movement_timer_timeout"]
[connection signal="timeout" from="RangeAttackTimer" to="RangedEnemyController" method="_on_range_attack_timer_timeout"]
